# asset-class-rotation

./: 0xdha-bskt.json  0xdha-holdings-sample.json  0xdha-holdings.json  README.md  asset_class_rotation.py  config.toml  mail.py  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: basket_order.yml
.github/workflows/: parse-holdings.yml  rebalance.yml
src/acr/: cli.py  config.py  downloader.py  holdings.py  mail.py  momentum.py  rebalancer.py  zerodha.py
tests/: test_config.py  test_mail.py  test_momentum.py  test_rebalancer.py  test_zerodha.py
