[project]
name = "asset-class-rotation"
version = "0.1.0"
description = "Asset class rotation strategy using momentum-based ETF ranking"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "resend>=2.30.0",
    "yfinance>=1.3.0",
]

[project.scripts]
acr = "acr.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/acr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
